<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">egoistenok_s_application1</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_ui_design">Ui Design</string>
<string name="lbl_usa">USA</string>
<string name="msg_rozanne_barrien">Rozanne Barrientes</string>
<string name="lbl_n">N</string>
<string name="lbl_remote">Remote</string>
<string name="lbl_ui_design_lead">UI Design Lead</string>
<string name="lbl_user_name">User Name</string>
<string name="lbl_email_address">Email Address</string>
<string name="lbl4">ВОЙТИ</string>
<string name="lbl5">Или продолжите</string>
<string name="lbl2">С возвращением</string>
<string name="lbl3">Забыли пароль?</string>
<string name="lbl_first_name">First Name</string>
<string name="lbl_country">Country</string>
<string name="msg_i_am_going_to_d">I am going to die in avengers endgame.....</string>
<string name="lbl_new_york_usa">New York, USA</string>
<string name="lbl_massage">Massage</string>
<string name="lbl_24h">24h</string>
<string name="lbl_12h">12h</string>
<string name="lbl_1200_m">$1200/m</string>
<string name="msg_senior_ux_desig">Senior Ux Designer</string>
<string name="lbl_6000_m">$6000/m</string>
<string name="lbl_visual_designer">Visual Designer</string>
<string name="lbl_b">B</string>
<string name="lbl_full_time">Full Time</string>
<string name="lbl_tony_stark">Tony Stark</string>
<string name="lbl_toronto_canada">Toronto, Canada</string>
<string name="lbl_h">H</string>
<string name="msg_move_in_some_sp">Move in some special work recently so.....</string>
<string name="lbl_last_name">Last Name</string>
<string name="msg20">Отличное резюме! Давайте...</string>
<string name="msg15">Исключительные коммуникативные навыки и умение работать в команде</string>
<string name="msg14">Необходимая квалификация:</string>
<string name="lbl_google">Google</string>
<string name="msg17">Знание принципов анимации и прототипирования</string>
<string name="msg16">Креативный подход к форме и цвету</string>
<string name="lbl20">Категория</string>
<string name="msg11">Графический дизайн</string>
<string name="msg10">Установить фильтры</string>
<string name="lbl21">Подкатегории</string>
<string name="lbl22">Местоположение</string>
<string name="msg13">Применить фильтры</string>
<string name="msg_you_shoud_be_a">You shoud be a avenger i thing the.....</string>
<string name="lbl23">Зарплата</string>
<string name="msg12">Тип вакансии проекта</string>
<string name="lbl24">Отобразить все</string>
<string name="lbl25">Описание</string>
<string name="lbl26">Компания</string>
<string name="lbl_elizabeth_olsen">Elizabeth Olsen</string>
<string name="lbl_freelance">Freelance</string>
<string name="lbl27">Отзывы</string>
<string name="lbl28">Откликнуться</string>
<string name="msg19">Изменить профиль</string>
<string name="msg18">Мне нравится быть частью творческого процесса и решать задачу сделать сложный продукт очень простым в использовании. Специализируется на пользовательском опыте, пользовательском интерфейсе.</string>
<string name="lbl29">Загрузить</string>
<string name="lbl_hak_eye">Hak Eye</string>
<string name="lbl_06h">06h</string>
<string name="lbl_part_time">Part Time</string>
<string name="lbl_ui_ux_designer">UI/UX Designer</string>
<string name="lbl_35">35 Проектов</string>
<string name="lbl_4_35_pm">4:35 PM</string>
<string name="lbl_password">Password</string>
<string name="lbl_contract">Contract</string>
<string name="lbl8">Или продолжите </string>
<string name="lbl9">Войти</string>
<string name="lbl6">Создай аккаунт</string>
<string name="lbl_shafi">Shafi</string>
<string name="lbl7">СОЗДАТЬ АККАУНТ</string>
<string name="lbl_canda">Canda</string>
<string name="lbl10">Поиск здесь</string>
<string name="lbl11">Показать Все</string>
<string name="lbl12">Продуктолог</string>
<string name="lbl13">Последние посты</string>
<string name="lbl_serach_here">Serach here...</string>
<string name="lbl14">Сообщения</string>
<string name="lbl_show_all">Show All</string>
<string name="lbl15">Профиль</string>
<string name="lbl16">Настройки</string>
<string name="lbl17">Поиск</string>
<string name="lbl18">Актуальные</string>
<string name="lbl_ui_ux_design">UI/UX Design</string>
<string name="lbl19">Самые последние</string>
<string name="lbl_cv">CV</string>
<string name="lbl_adom_shafi">Adom Shafi</string>
<string name="msg">Найди проект мечты</string>
<string name="lbl_shopify">Shopify</string>
<string name="lbl_your_email">Your Email</string>
<string name="msg_senior_ui_desig">Senior UI Designer</string>
<string name="msg_product_designe">Product Designer</string>
<string name="lbl_4_34_pm">4:34 PM</string>
<string name="lbl_22">2</string>
<string name="msg_hellobesnik_gma">hellobesnik@gmail.com</string>
<string name="lbl40">Как ты?&#128540;</string>
<string name="lbl41">Отлично&#129311;</string>
<string name="lbl42">ДААААААААА &#128525;</string>
<string name="lbl_thor">Thor</string>
<string name="lbl_type_a_message">Type a message</string>
<string name="lbl_setting">Setting</string>
<string name="lbl_2500_m">$2500/m</string>
<string name="lbl_facebook">Facebook</string>
<string name="lbl_name">Name</string>
<string name="msg25">Ага, хочешь поучаствовать?</string>
<string name="lbl30">Проекты </string>
<string name="lbl31">Выйти</string>
<string name="msg22">Приглашаем к участию в  проектах...</string>
<string name="lbl_profile">Profile</string>
<string name="lbl32">*************</string>
<string name="msg21">Мы должны говорить с...</string>
<string name="lbl33">Сохранить</string>
<string name="msg24">Я слышал, вы, ребята, запускаете новый проект?</string>
<string name="lbl">Давай начнем</string>
<string name="lbl34">Проекты</string>
<string name="lbl_banner">Banner</string>
<string name="msg23">Я думаю, мы должны ....</string>
<string name="lbl35">Ваши Проекты</string>
<string name="msg_payp">Как насчет Paypal?</string>
<string name="lbl36">Выполнен</string>
<string name="lbl_steave">Steave</string>
<string name="lbl37">В работе</string>
<string name="lbl38">Главная</string>
<string name="lbl39">Привет</string>
<string name="lbl_toronto_canada2">Toronto Canada</string>
<string name="lbl_82">Проекты (8)</string>
<string name="lbl_4500_m">$4500/m</string>
<string name="lbl_83">(8)</string>
<string name="lbl_1">1</string>
<string name="lbl_natasha">Natasha</string>
<string name="lbl_hi">Hi</string>
<string name="lbl_popular_job">Popular Job</string>
<string name="lbl_2k_5k">$2k-$5k</string>
<string name="lbl_dribbble">Dribbble</string>
<string name="lbl_spotify">Spotify</string>
<string name="lbl_1200_monthly">$1200 Monthly</string>
<string name="msg_figma_xd_sket">Figma,Xd &amp; Sketch</string>
<string name="msg4">Новый пользователь? Создай аккаунт</string>
<string name="msg3">Заполните свои данные </string>
<string name="msg2">Найти проект своей мечты проще и быстрее с ProjectHub</string>
<string name="lbl_recent_post">Recent Post</string>
<string name="msg8">Уже есть аккаунт? </string>
<string name="lbl_job_apply">Job Apply</string>
<string name="msg7">Уже есть аккаунт? Войти</string>
<string name="msg6">Создание аккаунта</string>
<string name="msg5">Новый пользователь? </string>
<string name="lbl_netflix">Netflix</string>
<string name="msg9">Популярные проекты</string>
<string name="lbl_anaya_sanji">Anaya Sanji</string>
<string name="msg_lead_product_ma">Lead Product Manager</string>
<string name="msg_i_have_to_save">I have to save natasha in endgame.....</string>
<string name="lbl_4500_monthly">$4500 Monthly</string>
<string name="lbl_adom">Adom</string>
<string name="msg_please_enter_valid_pa">Please enter valid password</string>
<string name="msg_please_enter_valid_email">Please enter valid email</string>
<string name="msg_please_enter_valid_text">Please enter valid text</string>
</resources>
