<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listavatarRowModel" type="com.egoistenoksapplication.app.modules.massage.data.model.ListavatarRowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearRowavatar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <ImageView android:id="@+id/imageAvatar"
            android:layout_height="@dimen/_40pxh"
            android:layout_width="@dimen/_40pxh"
            android:scaleType="centerCrop" circular="@{true}"
            imageRes="@{@drawable/img_avatar}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_avatar"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnrozannebarrien"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_3pxv"
            android:layout_weight="0.79" android:layout_width="0dp" android:orientation="vertical">
            <TextView android:ellipsize="end"
                android:id="@+id/txtRozanneBarrien"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@{listavatarRowModel.txtRozanneBarrien}"
                style="@style/txtPoppinsmedium16_6" tools:text="@string/msg_rozanne_barrien"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtThenewLeanst"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_5pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@{listavatarRowModel.txtThenewLeanst}"
                style="@style/txtPoppinsregular14_1" tools:text="@string/msg20"/>
        </LinearLayout>
        <TextView android:ellipsize="end"
            android:id="@+id/txtNotification"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_6pxv"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_weight="0.08" android:layout_width="0dp"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:paddingBottom="@dimen/_6pxv"
            android:paddingEnd="@dimen/_9pxh"
            android:paddingStart="@dimen/_9pxh"
            android:paddingTop="@dimen/_7pxv" android:singleLine="true"
            android:text="@{listavatarRowModel.txtNotification}"
            style="@style/txtSolidRounded_3" tools:text="@string/lbl_22"/>
    </LinearLayout>
</layout>
