<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listgoogleRowModel" type="com.egoistenoksapplication.app.modules.home.data.model.ListgoogleRowModel"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearColumngoogle"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical" style="@style/groupStylewhite_1">
        <LinearLayout android:id="@+id/linearRowgoogle"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_13pxh"
            android:layout_marginStart="@dimen/_13pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <ImageButton
                android:background="@drawable/rectangle_bg_blue_50_radius_13"
                android:id="@+id/btnGoogle"
                android:layout_height="@dimen/_40pxh"
                android:layout_width="@dimen/_40pxh"
                android:paddingHorizontal="@dimen/_10pxh"
                android:paddingVertical="@dimen/_10pxv"
                android:scaleType="fitCenter"
                android:src="@drawable/img_google" tools:ignore="ContentDescription"/>
            <ImageButton
                android:background="@drawable/rectangle_bg_white_a700_radius_14"
                android:id="@+id/btnFavorite"
                android:layout_height="@dimen/_28pxh"
                android:layout_marginBottom="@dimen/_7pxv"
                android:layout_marginStart="@dimen/_157pxh"
                android:layout_marginTop="@dimen/_5pxv"
                android:layout_width="@dimen/_28pxh"
                android:paddingHorizontal="@dimen/_6pxh"
                android:paddingVertical="@dimen/_6pxv"
                android:scaleType="fitCenter"
                android:src="@drawable/img_favorite" tools:ignore="ContentDescription"/>
        </LinearLayout>
        <TextView android:ellipsize="end" android:id="@+id/txtGoogleOne"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_13pxh"
            android:layout_marginStart="@dimen/_13pxh"
            android:layout_marginTop="@dimen/_5pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:singleLine="true"
            android:text="@{listgoogleRowModel.txtGoogleOne}"
            style="@style/txtPoppinsregular12" tools:text="@string/lbl_google"/>
        <TextView android:ellipsize="end" android:id="@+id/txtTen"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_18pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:singleLine="true"
            android:text="@{listgoogleRowModel.txtTen}"
            style="@style/txtPoppinsmedium16" tools:text="@string/lbl12"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearRowprice"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_23pxv"
            android:layout_marginEnd="@dimen/_13pxh"
            android:layout_marginStart="@dimen/_13pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <TextView android:ellipsize="end" android:id="@+id/txtPrice"
                android:layout_height="wrap_content"
                android:layout_weight="0.36" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@{listgoogleRowModel.txtPrice}"
                style="@style/txtPoppinssemibold12" tools:text="@string/lbl_2500_m"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtCountry"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginStart="@dimen/_5pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.64" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@{listgoogleRowModel.txtCountry}"
                style="@style/txtPoppinsregular12" tools:text="@string/lbl_toronto_canada"/>
        </LinearLayout>
    </LinearLayout>
</layout>
